# server-app

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build-docker-image.yml
app/: .coveragerc
app/collection/: apps.py
app/collection/api/: collections.py  home.py  items.py  object_storage.py  pending_items.py  snaps.py
app/collection/tests/: test_collection.py  test_collections.py  test_home.py  test_items.py  test_object_storage.py  test_pending_items.py  test_snaps.py
app/config/: .env.dist  api.py  asgi.py  authentication.py  exceptions.py  external_client.py  pagination.py  s3_client.py  settings.py  urls.py  wsgi.py
app/config/storage/: abstract_client.py  google_client.py
app/config/tests/: base_test.py
app/core/: admin.py  enums.py  exceptions.py  models.py  schemas.py  utils.py
app/core/migrations/: 0001_initial.py  0002_approbation_rename_created_by_index_creator_and_more.py  0003_proposition_comment.py  0004_approbation_created_at_approbation_updated_at_and_more.py  0005_publication_primary_color_and_more.py  0006_remove_publication_primary_color_and_more.py  0007_alter_publication_dominant_colors.py  0008_alter_publication_dominant_colors.py  0009_proposition_dominant_colors.py  0010_approbation_unique_approbation_user_proposition.py  0011_index_object_name_alter_publication_name_and_more.py  0012_index_dominant_colors_alter_approbation_created_at_and_more.py  0013_pendingpublication.py  0014_collection_item_like_pendingitem_snap_and_more.py  0015_remove_collection_unique_index_name_and_more.py
app/core/models/: collections.py  common.py
app/core/notification/: notifier.py  (+2 more)
app/index/: admin.py  api.py  apps.py  authentication.py  models.py  schemas.py  utils.py
app/poukidex/: admin.py  apps.py  models.py  schemas.py
app/userauth/: apps.py  models.py  schemas.py  utils.py
app/viewsets/: utils.py
docker/: development.yml
docker-compose/: Dockerfile  development.yml
(+79 files in other folders)
