[tool.poetry]
name = "index"
version = "0.1.0"
description = "Backend of Index app"
authors = ["Thomas Darget <thomasdarget@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-ninja = "^0.19.1"
orjson = "^3.8.0"
celery = "^5.2.7"
jwt = "^1.3.1"
psycopg2-binary = "^2.9.3"


[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
